<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/search_button"
        style="@style/Button_activity_main"
        android:text="@string/search"
        app:icon="@drawable/ic_search" />

    <Button
        android:id="@+id/button_library"
        style="@style/Button_activity_main"
        android:text="@string/library"
        app:icon="@drawable/ic_library" />

    <Button
        android:id="@+id/button_settings"
        style="@style/Button_activity_main"
        android:layout_marginBottom="24dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings" />

</LinearLayout>